--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,9 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
-
+  <!-- <base href="https://github.com/salman-rafii/trysell_web/hey_flutter">
+   -->
+   <base href="/trysell_web/">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
@@ -29,7 +30,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>trysell_website</title>
+  <title>Trysell</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -98,6 +99,12 @@
     } else {
       // Service workers not supported. Just drop the <script> tag.
       loadMainDartJs();
+    }
+  </script>
+  <script>
+    const regExp = new RegExp("bot|google|baidu|bing|msn|teoma|slurp|yandex", "i");
+    if (regExp.test(navigator.userAgent)) {
+      window.flutterWebRenderer = "html";
     }
   </script>
 </body>
